--- a/.gitignore
+++ b/.gitignore
@@ -207,7 +207,7 @@ dmypy.json
 *.txt
 *.pt
 !requirements.txt
-=======
+
 # Pyre type checker
 .pyre/
 
@@ -222,5 +222,8 @@ cython_debug/
 #  be found at https://github.com/github/gitignore/blob/main/Global/JetBrains.gitignore
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
-#.idea/
->>>>>>> 741388c1915123bee9ff61effb29b3a165341ad3
+.idea/
+
+!media/cat_998.png
+!media/dots.png
+!media/heatmap.png
