--- a/config.json
+++ b/config.json
@@ -5,7 +5,8 @@
     "learning_rate": 0.001,
     "batch_size": 1,
     "val_split": 0.2,
-    "num_channels": 3
+    "num_channels": 3,
+    "gaussian_sigma": 5
   },
   "infer": {
     "image_path": "images/cat_998.png"
